fucking hard hard harddddd!!!!!!!!!!!!!! test blue = modify green = new

--- a/ww_2018_11_9.html
+++ b/ww_2018_11_9.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Title</title> 最上面顯示的自
 </head>
-<body>
-    kkkkjfdpsiafjairpn[w
+<body>  html javascript寫在裡面
+<h1> 字放在這裡會放大(h1為大小 可以用h2,h3,h4...) </h1>
+<h2> target >> enable to act in this page or other page (method = post get delete)</h2>
+
+<form> method = "post" action = "/action page php">送出後我希望和我互動的是php
+    <input type = "test" name = "firstname" />
+</br>換行
+    <select name = "cars">
+        <option value = "vsdolvo"> volvo </option> volvo=字串 select內的選項有vsdolvo aaa
+        <option value = "aaa"> aaa</option>
 </body>
 </html>
